# Flameic

./: .env  .gitignore  README.md  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mjs
docs/: AGENT_DEPLOYMENT_UX.md  AGENT_RESULT_REVIEW_QA.md  ARCHITECTURE.md  CODEBASE_AUDIT_REPORT.md  DEPLOYMENT_PREFLIGHT_QA.md  ENVIRONMENT_BLOCKER_QA.md  GITHUB_MARKETPLACE_ACTUAL_STATE.md  GITHUB_MARKETPLACE_V1_1_QA.md  GITHUB_SKILLS_MARKETPLACE.md  INSTALL_TEST_MATRIX.md  KNOWN_ALPHA_LIMITATIONS.md  KNOWN_LIMITATIONS.md  MULTI_AGENT_EXECUTION.md  NEXT_STEP_DECISION.md  PACKAGED_BUILD_QA.md  PRODUCT_POLISH_REVIEW.md  PRODUCT_REVIEW.md  PROMPT_TRANSPORT_QA.md  RELEASE_CHECKLIST.md  ROADMAP.md  ROCKET_FRONTEND_INVENTORY.md  RUNTIME_VERIFICATION.md  RUN_MODE_PROPAGATION_QA.md  SESSION_PERSISTENCE.md  UI_REBUILD_REVIEW.md  UX_QA_REVIEW.md
release-qa-evidence/: 00-baseline.json  01-after-nsis-update.json  02-after-nsis-uninstall.json  03-after-nsis-reinstall.json  04-after-msi-install.json  05-after-msi-uninstall.json  06-final-nsis-install.json  summary.json
release-qa-evidence-final-nsis/: 00-baseline.json  01-after-nsis-update.json  02-after-nsis-uninstall.json  03-after-nsis-reinstall.json  summary.json
scripts/: environment_blocker_test.mjs  github_marketplace_rate_limit_test.mjs  prompt_preview_test.mjs  release_lifecycle_qa.ps1  run_mode_propagation_test.mjs  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  main_backup.rs
(+117 files in other folders)
