[package]
name = "agentboard"
version = "0.1.0-alpha"
description = "AgentBoard Windows desktop control plane for local coding agents"
authors = ["AgentBoard"]
edition = "2021"

[lib]
name = "agentboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.0", features = [] }
